@@ -1,3 +1,7 @@
+  17 May 2017; Hendrik v. Raven (lorem_ipsum) <hendrik@consetetur.de>
+  metadata.xml, stig-0.5.0a.ebuild, stig-0.6.0a.ebuild:
+  net-p2p/stig: add python3.6 and correct urwidtrees dep
+
 *stig-0.6.0a (25 Apr 2017)
 
   25 Apr 2017; Hendrik v. Raven (lorem_ipsum) <hendrik@consetetur.de>
